--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.1', '8.2', '8.3']
+        php: ['8.1']
         moodle-branch: ['MOODLE_401_STABLE', 'MOODLE_405_STABLE']
         database: [mariadb]
 
